samples/_failures_safe/1761349712_8563bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4ec7f37c.c: In function ‘main’:
./samples/SAFE/__tmp_4ec7f37c.c:153:28: error: missing terminating " character
  153 |                     printf("Matrix addition failed: dimension mismatch
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4ec7f37c.c:153:21: error: expected expression at end of input
  153 |                     printf("Matrix addition failed: dimension mismatch
      |                     ^~~~~~
./samples/SAFE/__tmp_4ec7f37c.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4ec7f37c.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4ec7f37c.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4ec7f37c.c:153:21: error: expected declaration or statement at end of input
